--- a/Trust Game/Assembly-CSharp.csproj
+++ b/Trust Game/Assembly-CSharp.csproj
@@ -60,18 +60,19 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\DestroyBullet.cs" />
     <Compile Include="Assets\Scripts\Audio\SoundManager.cs" />
     <Compile Include="Assets\Scripts\Camera\CameraScript.cs" />
     <Compile Include="Assets\Scripts\GameManager.cs" />
+    <Compile Include="Assets\Scripts\Objects\DestroyBullet.cs" />
     <Compile Include="Assets\Scripts\Objects\ObjectAI.cs" />
     <Compile Include="Assets\Scripts\Objects\ObjectsScript.cs" />
+    <Compile Include="Assets\Scripts\Objects\ShootBullet.cs" />
+    <Compile Include="Assets\Scripts\Parallax.cs" />
     <Compile Include="Assets\Scripts\Player\PlayerController.cs" />
     <Compile Include="Assets\Scripts\Player\PlayerScript.cs" />
     <Compile Include="Assets\Scripts\Player\Shoot.cs" />
     <Compile Include="Assets\Scripts\Spawning\SpawnPoint.cs" />
-    <Compile Include="Assets\Scripts\U.I_\HealthBarScript.cs" />
-    <Compile Include="Assets\ShootBullet.cs" />
+    <Compile Include="Assets\Scripts\UI\HealthBarScript.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Unity.XR.Management">
